added css and changed forms

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -2,11 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Welcome To App</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Your Account</title>
     </head>
     <body>
         <div>
-            <h1>Welcome to App</h1>
+            <h1>Your Account</h1>
             <form action="/">
                 <button type="submit">Log Out</button>
             </form>
