adding session and config.py

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,7 +10,7 @@
     <body>
         <div>
             <h1>Your Account</h1>
-            <form action="/">
+            <form action="/logout">
                 <button type="submit">Log Out</button>
             </form>
         </div>
