--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,15 @@ body {
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
 
+.profile {
+    background-color: #ffffff;
+    width: 400px;
+    margin: 7em auto;
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+    padding-bottom: 20px;
+}
+
 .sign {
     padding-top: 40px;
     color: #8C55AA;
@@ -39,6 +48,7 @@ body {
     margin-bottom: 27px;
     font-family: 'Ubuntu', sans-serif;
 }
+
 
 form.form1 {
     padding-top: 40px;
@@ -96,6 +106,74 @@ a {
     color: #E1BEE7;
     text-decoration: none
 }
+
+.profile_img {
+    border-radius: 50%;
+    width: 100px;
+}
+
+.profile_items {
+    text-shadow: 0px 0px 3px rgba(160, 160, 160, 0.12);
+    color: #818181;
+    padding-top: 0px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 14px;
+}
+
+.message_form {
+    width: 76%;
+    height: 150px;
+    color: rgb(38, 50, 56);
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 1px;
+    background: rgba(136, 126, 126, 0.04);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.02);
+    margin-bottom: 50px;
+    margin-left: 46px;
+    text-align: left;
+    margin-bottom: 27px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.message_img {
+    float: none;
+    border-radius: 30%;
+    width: 50px;
+    margin-bottom: 0px;
+}
+
+.message_username {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    color:#5e5e5e;
+}
+
+.message_content {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 12px;
+    color:#7e7e7e;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.message_box {
+    background-color: #f5f5f5;
+    width: 350px;
+    margin: 1em auto;
+    border-radius: 0.5em;
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+}
+
 
 @media (max-width: 600px) {
     .main {
