--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,6 +110,7 @@ a {
 .profile_img {
     border-radius: 50%;
     width: 100px;
+    height: 100px;
 }
 
 .profile_items {
@@ -145,6 +146,7 @@ a {
     float: none;
     border-radius: 30%;
     width: 50px;
+    height: 50px;
     margin-bottom: 0px;
 }
 
