--- a/templates/settings.html
+++ b/templates/settings.html
@@ -11,7 +11,7 @@
     <body>
         <div class="main">
             <form method="POST" action="" enctype="multipart/form-data">
-                <p class="sign" align="center">Sign Up</p>
+                <p class="sign" align="center">Account Settings</p>
                 <p><input align="center" type="file" name="file" accept=".jpg,.png,.jfif"></p>
                 <input class="un" align="center" type="text" name="location" id="location" placeholder="Location"><br>
                 <input class="un" align="center" type="text" name="occupation" id="occupation" placeholder="Occupation"><br>
