--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,6 +8,7 @@
         <title>Profile</title>
     </head>
     <body>
+        <img class="profile_img" src="{{ url_for('static', filename='logo.png') }}">
         <div class="profile">
             <p class="sign" align="center">{{ data.name }} </p>
             <p align="center">
