--- a/templates/register.html
+++ b/templates/register.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+        <img class="profile_img" src="{{ url_for('static', filename='logo.png') }}">
         <div class="main">
             <form method="POST">
                 <p class="sign" align="center">Sign Up</p>
