--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,6 +8,7 @@
         <title>Your Account</title>
     </head>
     <body>
+        <img class="profile_img" src="{{ url_for('static', filename='logo.png') }}">
         <div class="profile">
             <p class="sign" align="center">Welcome {{ data.name }} </p>
             <p align="center">
