--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+        <img class="profile_img" src="{{ url_for('static', filename='logo.png') }}">
         <div class="main">
             <p class="sign" align="center">Sign In</p>
             <form class="form1" action="" method="POST">
