--- a/templates/settings.html
+++ b/templates/settings.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+        <img class="profile_img" src="{{ url_for('static', filename='logo.png') }}">
         <div class="main">
             <form method="POST" action="" enctype="multipart/form-data">
                 <p class="sign" align="center">Account Settings</p>
