--- a/templates/settings.html
+++ b/templates/settings.html
@@ -13,7 +13,12 @@
         <div class="main">
             <form method="POST" action="" enctype="multipart/form-data">
                 <p class="sign" align="center">Account Settings</p>
-                <p><input align="center" type="file" name="file" accept=".jpg,.png,.jfif"></p>
+                <p>
+                    <div class="file-input" align="center">
+                        <input type="file" id="file" class="file" name="file" accept=".jpg,.png,.jfif"/>
+                        <label for="file">Add Photo</label>
+                    </div>
+                </p>
                 <input class="un" align="center" type="text" name="location" id="location" placeholder="Location"><br>
                 <input class="un" align="center" type="text" name="occupation" id="occupation" placeholder="Occupation"><br>
                 <input class="submit" align="center" type="submit" name="submit" value="SUBMIT"><br>
